--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<nav class="bg-purple-900 text-white justify-between flex">
+  <span class="flex px-2 py-2 font-bold items-center text-xl">Phones Mania</span>
+  <ul class="px-20 py-5 flex space-x-11 cursor-pointer justify-end">
+    <li class="hover:bg-fuchsia-600 hover: px-5 hover: rounded-xl">Home</li>
+    <li class="hover:bg-fuchsia-600 hover: px-5 hover: rounded-xl">Products</li>
+    <li class="hover:bg-fuchsia-600 hover: px-5 hover: rounded-xl">
+      Contact us
+    </li>
+  </ul>
+</nav>
+<main class="bg-fuchsia-100 flex">
+  <div class="px-40 py-40">
+    <div class="text-4xl">Best Price in the Market</div>
+    <p class="text-md">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, id.
+      Culpa, eveniet similique laboriosam pariatur, ratione tempore perspiciatis
+      dolore optio, blanditiis error magni!
+    </p>
+    <div class="buttons space-x-2 mt-4">
+      <button
+        class="px-3 py-2 rounded-2xl bg-purple-900 text-white hover:bg-fuchsia-600 hover:text-white"
+      >
+        Buy Now
+      </button>
+      <button
+        class="bg-purple-900 text-white px-3 py-2 rounded-2xl hover:bg-fuchsia-600 hover:text-white " 
+      >
+        Contact Us
+      </button>
+    </div> 
+  </div>
+  <div class="flex items-center " >
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Man_Talking_on_the_Phone_Cartoon_Vector.svg" class="h-60">
+  </div>
+</main>
+<hr>
